--- a/build.gradle
+++ b/build.gradle
@@ -25,17 +25,22 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	implementation 'org.projectlombok:lombok:1.18.20'
+	implementation 'org.projectlombok:lombok:1.18.24'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	annotationProcessor('org.projectlombok:lombok')
+	annotationProcessor('org.projectlombok:lombok:1.18.24')
 	testAnnotationProcessor('org.projectlombok:lombok')
 
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	/* Spring security */
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.5'
+
+	/* JWT */
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
 	// Swagger
 	implementation "io.springfox:springfox-boot-starter:3.0.0"
