--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ dependencies {
 	implementation "io.springfox:springfox-boot-starter:3.0.0"
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
+
+	implementation 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
